force-app/main/default/objects/Change_Owner_Approval_History__c/Change_Owner_Approval_History__c.object-meta.xml
<CustomObject>
    <label>Approval History</label>
    <nameField>
        <displayFormat>Approval History-{00000}</displayFormat>
        <label>Approval History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>