force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Approval_Finished_Time__c.field-meta.xml
<CustomField>
    <fullName>Approval_Finished_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Finished Time</label>
    <type>DateTime</type>
</CustomField>