force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Approval_Step_Start_Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step_Start_Wait_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pending Approver Start</label>
    <type>DateTime</type>
</CustomField>