force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Approval_Wait_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Approval_Wait_Duration_Days__c</fullName>
    <formula>IF( ISBLANK( Approval_Finished_Time__c ) ,NOW() -  Approval_Start_Wait_Time__c, Approval_Finished_Time__c - Approval_Start_Wait_Time__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Duration(Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>