force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Approver2__c.field-meta.xml
<CustomField>
    <fullName>Approver2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Owner_Approval_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>