force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Approver2_Profile__c.field-meta.xml
<CustomField>
    <fullName>Approver2_Profile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approver2 Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>