force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Approver3__c.field-meta.xml
<CustomField>
    <fullName>Approver3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Owner_Approval_Histories2</relationshipName>
    <type>Lookup</type>
</CustomField>