force-app/main/default/objects/Change_Owner_Approval_History__c/fields/BI_Flag__c.field-meta.xml
<CustomField>
    <fullName>BI_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BI Flag</label>
    <type>Checkbox</type>
</CustomField>