force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Case_Access__c.field-meta.xml
<CustomField>
    <fullName>Case_Access__c</fullName>
    <description>account Team access case permission</description>
    <label>Case Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>