force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Change_Owner_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Change_Owner_Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending for Approval</fullName>
            </value>
            <value>
                <fullName>1st Approver Approved</fullName>
            </value>
            <value>
                <fullName>2nd Approver Approved</fullName>
            </value>
            <value>
                <fullName>3rd Approver Approved</fullName>
            </value>
            <value>
                <fullName>Final Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>