force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Change_Owner_Remark__c.field-meta.xml
<CustomField>
    <fullName>Change_Owner_Remark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Remark</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>