force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Change_to_owner__c.field-meta.xml
<CustomField>
    <fullName>Change_to_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Owner_Approval_Histories5</relationshipName>
    <type>Lookup</type>
</CustomField>