force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Current_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Approver_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pending Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>