force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Current Owner at the moment of approval request.</inlineHelpText>
    <label>Current Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Owner_Approval_Histories4</relationshipName>
    <type>Lookup</type>
</CustomField>