force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Current_Segement__c.field-meta.xml
<CustomField>
    <fullName>Current_Segement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Segment</label>
    <length>5</length>
    <type>Text</type>
</CustomField>