force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Escalated_Flag__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated Flag</label>
    <type>Checkbox</type>
</CustomField>