force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Escalated_Warning_Message__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Warning_Message__c</fullName>
    <formula>IF(Escalated_Flag__c , &quot;Escalated by System&quot;, &quot;&quot;)</formula>
    <label>Escalated Warning Message</label>
    <type>Text</type>
</CustomField>