force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Opportunity_Access__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Access__c</fullName>
    <description>account Team access opportunity  permission</description>
    <label>Opportunity Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
                <isActive>false</isActive>
                <label>Private</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>