force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Pending_Approver_Team__c.field-meta.xml
<CustomField>
    <fullName>Pending_Approver_Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pending Approver Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>