force-app/main/default/objects/Change_Owner_Approval_History__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <description>account Team role</description>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARM / ABDM</fullName>
            </value>
            <value>
                <fullName>RMC</fullName>
            </value>
            <value>
                <fullName>Team Head / Zone Manager</fullName>
            </value>
            <value>
                <fullName>Client Service / Client Support</fullName>
            </value>
            <value>
                <fullName>RM / BDM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>