force-app/main/default/objects/Change_Owner_Approval_History__c/fields/To_Be_New_Segment__c.field-meta.xml
<CustomField>
    <fullName>To_Be_New_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To-Be New Segment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>