force-app/main/default/objects/Change_Owner_Approval_History__c/recordTypes/Add_Account_Team.recordType-meta.xml
<RecordType>
    <fullName>Add_Account_Team</fullName>
    <active>true</active>
    <description>Add Account Team</description>
    <label>Add Account Team</label>
</RecordType>