force-app/main/default/objects/Change_Owner_Approval_History__c/recordTypes/Change_Owner_Existing_Customer.recordType-meta.xml
<RecordType>
    <fullName>Change_Owner_Existing_Customer</fullName>
    <active>true</active>
    <description>Change Owner Existing Customer</description>
    <label>Change Owner Existing Customer</label>
</RecordType>