force-app/main/default/objects/Change_Owner_Approval_History__c/recordTypes/Change_Owner_Qualified_Prospect.recordType-meta.xml
<RecordType>
    <fullName>Change_Owner_Qualified_Prospect</fullName>
    <active>true</active>
    <description>Change Owner Qualified Prospect</description>
    <label>Change Owner Qualified Prospect</label>
</RecordType>