force-app/main/default/objects/Change_Owner_Approval_History__c/recordTypes/Change_Segment.recordType-meta.xml
<RecordType>
    <fullName>Change_Segment</fullName>
    <active>true</active>
    <description>Change Segment</description>
    <label>Change Segment</label>
</RecordType>